--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>INFO2180 Lab 1</title>
+    <link rel="stylesheet" href="css/style.ss">
+
 </head>
 <body>
  <header>
@@ -12,9 +14,10 @@
      <p>This is a simple webpage for Lab 1 of INFO2180.</p>
  </header>
  <main>
+   <img src="noelpp.jpg" raw=true>
  <h2>Noel Powell</h2>
- <p>I am determined to achieve the very best in this life.<br> 
-    By working hard and commiting to my responsibilities.
+ <p>I interested in doing web development because i want to enhnance my skills<br> in creating web applications.<br> 
+   and providing products for customers<br> By working hard and commiting to my responsibilities.
 
  </p>
  </main>
