--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <p>This is a simple webpage for Lab 1 of INFO2180.</p>
  </header>
  <main>
-   <img src="noelpp.jpg" raw=true>
+   <img src="noelpp.jpg" alt="Noel Powell" width="200px" height="300px">
  <h2>Noel Powell</h2>
  <p>I interested in doing web development because i want to enhnance my skills<br> in creating web applications.<br> 
    and providing products for customers<br> By working hard and commiting to my responsibilities.
