--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>INFO2180 Lab 1</title>
-    <link rel="stylesheet" href="css/style.ss">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
@@ -14,7 +14,7 @@
      <p>This is a simple webpage for Lab 1 of INFO2180.</p>
  </header>
  <main>
-   <img src="noelpp.jpg" raw=true>
+   <img src="noelpp.jpg" alt="Noel Powell" width="200px" height="300px">
  <h2>Noel Powell</h2>
  <p>I interested in doing web development because i want to enhnance my skills<br> in creating web applications.<br> 
    and providing products for customers<br> By working hard and commiting to my responsibilities.
