--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>INFO2180 Lab 1</title>
-    <link rel="stylesheet" href="css/style.ss">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
